# malafat-desktop

./: .gitignore  package-lock.json  package.json  release.env.example
.github/workflows/: build-windows.yml
scripts/: deploy.sh
src/: index.html  offline.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
